name:                hand
version:             0.1.0.0
synopsis:            A helping hand for jobs
-- description:
homepage:            https://github.com/schlueter/hand#readme
license:             AGPLv3
license-file:        LICENSE
author:              B Schlueter
maintainer:          haskell@schlueter.blue
copyright:           Copyright: (c) 2017 Brandon Schlueter
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hand-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hand
  default-language:    Haskell2010

test-suite hand-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hand
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schlueter/hand
